boothtype auto-fill base on application code

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -292,7 +292,7 @@
                         "
                       >
                         <span class="label">攤種 Booth Type</span><br /><span
-                          style="font-size: 2rem; line-height: 1.5rem"
+                          style="font-size: 2rem; padding-top: 15px"
                           id="booth-type"
                           >One Regular Booth</span
                         >
