price and equiptment

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -219,7 +219,6 @@
         </td>
 
         <!-- Right Column -->
-
         <td class="right">
           <div class="scroll-inner">
             <table width="100%">
@@ -303,7 +302,7 @@
                             border-bottom: none;
                           "
                         />
-                        基礎設備：
+                        <span id="equipment-title">基礎設備：</span>
                         <ul
                           style="
                             list-style-type: none;
@@ -366,14 +365,14 @@
                                 "
                               />
                               <span style="font-size: 2rem" id="billing1-price"
-                                >8,000 NTD </span
-                              ><small>(含稅)</small>
+                                >8,000 NTD
+                              </span>
                               <br />
                               僅基礎方案
 
                               <p
-                                style="color: red; font-size: 0.9rem"
-                                id="billing2-note"
+                                style="color: red; font-size: 0.8rem"
+                                id="billing1-note"
                               >
                                 ！請在付款時務必填入以下資料：<br />
                                 Email:
@@ -428,10 +427,10 @@
                               />
                               <span style="font-size: 2rem" id="billing2-price"
                                 >13,000 NTD </span
-                              ><small>(含稅)</small><br />
+                              ><br />
                               適合有輪班擺攤需求之攤主
                               <p
-                                style="color: red; font-size: 0.9rem"
+                                style="color: red; font-size: 0.8rem"
                                 id="billing2-note"
                               >
                                 ！請在付款時務必填入以下資料：<br />
