feat: hide product link section by default and remove redundant script for visibility control

--- a/localapplication.html
+++ b/localapplication.html
@@ -411,6 +411,7 @@
         <div
           class="column layout-form-column-grid-1 question-ProductLinks"
           id="productLink-l"
+          style="display: none"
         >
           <span class="from-description-header-ness">必填問題</span><br />
           <textarea
@@ -837,39 +838,8 @@
     </form>
 
     <script src="js/upload.js"></script>
-    <script>
-      document
-        .querySelectorAll('input[name="entry.133172086"]')
-        .forEach(function (radio) {
-          radio.addEventListener("change", function () {
-            // 先全部隱藏
-            document.getElementById("uploadArtwork").style.display = "none";
-            document.getElementById("uploadArtwork-l").style.display = "none";
-            document.getElementById("proposalLink").style.display = "none";
-            document.getElementById("proposalLink-l").style.display = "none";
-            document.getElementById("productLink").style.display = "none";
-
-            document.getElementById("productLink-l").style.display = "none";
-
-            // 根據選擇顯示
-            if (
-              this.value === "書攤" ||
-              this.value === "創作商品" ||
-              this.value === "食物酒水"
-            ) {
-              document.getElementById("uploadArtwork").style.display = "";
-              document.getElementById("uploadArtwork-l").style.display = "";
-              document.getElementById("productLink-l").style.display = "";
-              document.getElementById("productLink").style.display = "";
-            } else if (this.value === "裝置類") {
-              document.getElementById("proposalLink").style.display = "";
-              document.getElementById("proposalLink-l").style.display = "";
-            }
-            // 你可以根據其他攤種加上對應顯示邏輯
-          });
-        });
-    </script>
     <script src="js/identity2.js"></script>
+    <script src="js/main.js"></script>
     <!-- <script src="js/jump.js"></script> -->
     <script src="js/yes.js"></script>
     <script src="js/password.js"></script>
