--- a/localapplication.html
+++ b/localapplication.html
@@ -126,9 +126,7 @@
         <div
           class="column layout-form-column-grid-4 question-ParticipatedYears"
         >
-          <span class="from-description-header-ness-no"
-            >非必填問題、可多選</span
-          >
+          <span class="from-description-header-ness">必填問題、可多選</span>
           <input
             type="checkbox"
             class="form-input-checkbox"
