feat: show equipment info by default and adjust registration status display logic

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -276,7 +276,7 @@
                 </td>
               </tr>
 
-              <tr id="equipmentinfo">
+              <tr id="equipmentinfo" style="display: block">
                 <td colspan="3" style="padding: 0; border: none">
                   <table style="width: 100%; table-layout: auto">
                     <tr>
