--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -2,6 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; 
+             script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://code.jquery.com https://www.googletagmanager.com; 
+             style-src 'self' 'unsafe-inline'; 
+             connect-src https://www.google-analytics.com https://script.google.com https://script.googleusercontent.com/;
+             frame-src https://www.google.com;
+             form-action 'self' https://docs.google.com;"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Oversea Application - 草率季Taipei Art Book Fair</title>
