--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
+    <!-- <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; 
              script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://code.jquery.com https://www.googletagmanager.com; 
@@ -11,7 +11,6 @@
              frame-src https://www.google.com;
              form-action 'self' https://docs.google.com;"
     />
-    <!-- SEO 基本 -->
     <meta
       name="description"
       content="草率季 Taipei Art Book Fair 本地申請表單，歡迎創作者、書店、出版商等報名參加。"
@@ -22,7 +21,6 @@
     />
     <meta name="author" content="Taipei Art Book Fair" />
 
-    <!-- 社群分享（Open Graph for Facebook, LINE, etc.）-->
     <meta
       property="og:title"
       content="本地申請 - 草率季 Taipei Art Book Fair"
@@ -41,7 +39,6 @@
       content="https://taipeiartbookfair.github.io/image/og-image.jpg"
     />
 
-    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
@@ -56,14 +53,11 @@
       content="https://taipeiartbookfair.github.io/image/og-image.jpg"
     />
 
-    <!-- 強制 IE 使用最新渲染引擎 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <!-- 禁止自動電話號碼格式化（行動裝置）-->
     <meta name="format-detection" content="telephone=no" />
 
-    <!-- favicon 已有，可再加 Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="image/icon-1.ico" />
+    <link rel="apple-touch-icon" href="image/icon-1.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Oversea Application - 草率季Taipei Art Book Fair</title>
