fix: enhance application received message with additional instructions for email confirmation

--- a/application-received.html
+++ b/application-received.html
@@ -42,12 +42,20 @@
         border-radius: 1rem;
       "
     >
-      我們已經收到您的申請，感謝您的報名。您將收到一封自動確認電子郵件，如果您沒有收到電子郵件，請檢查您的垃圾信箱。如果有需要修改資料，請重新報名。<br />
-      Application Received. Thank you for submitting your application, We have
-      successfully received your response. If you need to modify it, please fill
-      in the registration form again. You will receive an automated confirmation
-      Email once we have received your application. Please check your Spam
-      folders if you haven’t received your Email. <br /><br />
+      我們已經收到您的申請，感謝您的報名。您將收到一封自動確認電子郵件，如果您沒有收到電子郵件，請檢查您的垃圾信箱。<span
+        style="color: red"
+        >若過了一天沒收到，請幫我們用無痕模式再填一次。</span
+      >如果有需要修改資料，請重新報名。<br />
+      Application Received. Thank you for submitting your application, we have
+      successfully received your response. You will receive an automated
+      confirmation email. If you do not receive the email, please check your
+      spam folder.
+      <span style="color: red"
+        >If you still haven't received it after a day, please help us by
+        submitting the form again using incognito mode.</span
+      >
+      If you need to modify your information, please fill in the registration
+      form again. <br /><br />
 
       完整的參展名單將從九月開始，陸續在我們的官方網站和社群平台上公布。<br />The
       complete list of exhibitors will gradually be announced on our official
