fix: format instructions for resubmission in application received message

--- a/application-received.html
+++ b/application-received.html
@@ -44,7 +44,7 @@
     >
       我們已經收到您的申請，感謝您的報名。您將收到一封自動確認電子郵件，如果您沒有收到電子郵件，請檢查您的垃圾信箱。<span
         style="color: red"
-        >若過了一天沒收到，請幫我們用無痕模式再填一次。</span
+        >若過了一天沒收到，請幫我們用<b>「無痕模式」</b>再填一次。</span
       >如果有需要修改資料，請重新報名。<br />
       Application Received. Thank you for submitting your application, we have
       successfully received your response. You will receive an automated
@@ -52,7 +52,7 @@
       spam folder.
       <span style="color: red"
         >If you still haven't received it after a day, please help us by
-        submitting the form again using incognito mode.</span
+        submitting the form again using <b>"incognito mode"</b>.</span
       >
       If you need to modify your information, please fill in the registration
       form again. <br /><br />
