--- a/application-received.html
+++ b/application-received.html
@@ -44,15 +44,15 @@
     >
       我們已經收到您的申請，感謝您的報名。您將收到一封自動確認電子郵件，如果您沒有收到電子郵件，請檢查您的垃圾信箱。<span
         style="color: red"
-        >若過了一天沒收到，請幫我們用<b>「無痕模式」</b>再填一次。</span
+        >若過了一天沒收到確認信，請用<b>瀏覽器的「無痕模式」</b>再填一次。</span
       >如果有需要修改資料，請重新報名。<br />
       Application Received. Thank you for submitting your application, we have
       successfully received your response. You will receive an automated
       confirmation email. If you do not receive the email, please check your
       spam folder.
-      <span style="color: red"
-        >If you still haven't received it after a day, please help us by
-        submitting the form again using <b>"incognito mode"</b>.</span
+      <span style="color: red">
+        If you still haven't received it after a day, please submit the form
+        again using <b>incognito mode</b> in your browser.</span
       >
       If you need to modify your information, please fill in the registration
       form again. <br /><br />
