fix: update title and enhance account management link in dashboard

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -67,9 +67,11 @@
               >
             </p>
           </div>
-          <p style="background-color: blueviolet; color: ghostwhite">
-            帳號管理<br />Account
-          </p>
+          <a href="account.html" style="text-decoration: none"
+            ><p style="background-color: blueviolet; color: ghostwhite">
+              帳號管理<br />Account
+            </p></a
+          >
         </td>
 
         <!-- Middle Column -->
