--- a/account.html
+++ b/account.html
@@ -11,7 +11,7 @@
          connect-src https://www.google-analytics.com https://script.google.com;
          frame-src https://www.google.com;"
     />
-    <title>Edit Dashboard - 草率季Taipei Art Book Fair</title>
+    <title>Your Profile - 草率季Taipei Art Book Fair</title>
     <link rel="stylesheet" href="css/dashboard.css" />
     <link rel="stylesheet" href="css/font.css" />
     <link rel="shortcut icon" href="image/icon-1.ico" />
@@ -27,16 +27,12 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-
       gtag("config", "G-EPSXJPDH6L");
     </script>
     <script src="js/dashboard-basic.js"></script>
   </head>
   <body>
     <table class="layout">
-      <a href="dashboard-TPABF.html" class="close-button" title="返回 Dashboard"
-        >×</a
-      >
       <tr>
         <!-- Sidebar -->
         <td class="sidebar">
@@ -47,7 +43,7 @@
               style="width: 4.5vw; height: auto; transform: rotate(45deg)"
             />
           </p>
-          <p style="background-color: black; color: ghostwhite">
+          <p style="background-color: ghostwhite; color: black">
             攤商管理<br />Dashboard
           </p>
           <hr class="sidebar-hr" />
@@ -63,125 +59,163 @@
               >
             </p>
           </div>
-          <p style="background-color: blueviolet; color: ghostwhite">
+          <p style="background-color: black; color: ghostwhite">
             帳號管理<br />Account
           </p>
         </td>
 
-        <!-- Middle form -->
+        <!-- Profile summary and info -->
         <td class="edit-page">
           <div class="scroll-inner">
-            <form class="edit-form">
-              <h2 style="font-size: 1.5rem">編輯品牌資料 Edit Brand Info</h2>
-
-              <table width="100%">
-                <tr>
-                  <td colspan="2">
-                    <span class="label">品牌名稱 Brand Name</span><br />
-                    <input
-                      type="text"
-                      name="brandName"
-                      value="Yoshimi Saito"
-                      style="width: 100%"
-                    />
-                  </td>
-                </tr>
-                <tr>
-                  <td colspan="2">
-                    <span class="label">品牌簡介 Bio</span><br />
-                    <textarea name="bio" rows="6" style="width: 100%">
-這是一段品牌簡介...</textarea
-                    >
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <span class="label">代表人 Contact Person</span><br />
-                    <input
-                      type="text"
-                      name="contactPerson"
-                      value="王大明"
-                      style="width: 100%"
-                    />
-                  </td>
-                  <td>
-                    <span class="label">聯絡信箱 Email</span><br />
-                    <input
-                      type="email"
-                      name="email"
-                      value="damin@gmail.com"
-                      style="width: 100%"
-                    />
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <span class="label">聯絡電話 Phone</span><br />
-                    <input
-                      type="text"
-                      name="phone"
-                      value="(+31)0923485729"
-                      style="width: 100%"
-                    />
-                  </td>
-                  <td>
-                    <span class="label">Website</span><br />
-                    <input
-                      type="url"
-                      name="website"
-                      value="https://www.nowplacesf.com/publications"
-                      style="width: 100%"
-                    />
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <span class="label">Instagram</span><br />
-                    <input
-                      type="text"
-                      name="instagram"
-                      value="@51personaeproject"
-                      style="width: 100%"
-                    />
-                  </td>
-                  <td>
-                    <span class="label">Facebook</span><br />
-                    <input
-                      type="text"
-                      name="facebook"
-                      value=""
-                      style="width: 100%"
-                    />
-                  </td>
-                </tr>
-                <tr>
-                  <td colspan="2">
-                    <span class="label">Whatsapp</span><br />
-                    <input
-                      type="text"
-                      name="whatsapp"
-                      value=""
-                      style="width: 100%"
-                    />
-                  </td>
-                </tr>
-              </table>
-
-              <p style="margin-top: 2rem; color: darkgray">
-                請再次確認資訊是否正確後進行修改。請注意，草率簿將於 8
-                月底開始排版，最終資料將以工作同仁所彙整的版本為準。
-              </p>
-
-              <div style="margin-top: 1rem">
-                <button
-                  type="submit"
-                  class="pay-button"
-                  style="padding: 0.7rem 2rem"
+            <table
+              class="profile-info-table"
+              style="
+                width: 100%;
+                border-collapse: separate;
+                border-spacing: 0;
+                background: #fff;
+                border-radius: 1rem;
+                box-shadow: 0 2px 8px #0001;
+                overflow: hidden;
+              "
+            >
+              <tr>
+                <td
+                  colspan="2"
+                  style="
+                    background: #f8f8f8;
+                    padding: 2rem 1.5rem;
+                    border-bottom: 2px solid #eee;
+                  "
                 >
-                  送出 Submit
-                </button>
-              </div>
-            </form>
+                  <div style="display: flex; align-items: center; gap: 2rem">
+                    <div class="profile-summary-info">
+                      <h2 style="margin: 0 0 0.3em 0; font-size: 2rem">
+                        書攤代表人
+                      </h2>
+                      <div style="color: #888; font-size: 1.1rem">
+                        Contact Person
+                      </div>
+                      <div style="margin-top: 0.5em; color: #555">
+                        <span style="font-size: 1.1em"
+                          >LB@double-grass.com</span
+                        >
+                      </div>
+                      <div
+                        class="profile-links"
+                        style="
+                          display: flex;
+                          flex-wrap: wrap;
+                          gap: 1.5rem;
+                          margin: 1.5rem 0 0 0;
+                        "
+                      >
+                        <a
+                          href="https://www.youtube.com/@tsaowenzee"
+                          target="_blank"
+                          >YouTube</a
+                        >
+                        <a
+                          href="https://www.instagram.com/tsaowenzee"
+                          target="_blank"
+                          >Instagram</a
+                        >
+                        <span style="color: #aaa">Facebook: None</span>
+                        <span style="color: #aaa">Whatsapp: None</span>
+                      </div>
+                      <button
+                        class="profile-edit-btn pay-button"
+                        style="
+                          margin-top: 1.5rem;
+                          padding: 0.5em 1.5em;
+                          border-radius: 0.5em;
+                          font-size: 1rem;
+                        "
+                        onclick="window.location.href='account-edit.html'"
+                      >
+                        編輯個人資料 Edit Profile
+                      </button>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td
+                  class="label"
+                  style="
+                    color: #888;
+                    width: 160px;
+                    font-weight: 500;
+                    background: lemonchiffon;
+                    border-bottom: 1px dashed #bbb;
+                  "
+                >
+                  聯絡信箱 Contact Email
+                </td>
+                <td style="border-bottom: 1px dashed #bbb">
+                  LB@double-grass.com
+                </td>
+              </tr>
+              <tr>
+                <td class="label" style="color: #888; font-weight: 500">
+                  聯絡電話 Contact Phone
+                </td>
+                <td style="border-bottom: 1px dashed #bbb">92345678</td>
+              </tr>
+              <tr>
+                <td
+                  class="label"
+                  style="
+                    color: #888;
+                    font-weight: 500;
+                    background: lemonchiffon;
+                    border-bottom: 1px dashed #bbb;
+                  "
+                >
+                  Website
+                </td>
+                <td style="border-bottom: 1px dashed #bbb">
+                  <a href="https://www.youtube.com/@tsaowenzee" target="_blank"
+                    >https://www.youtube.com/@tsaowenzee</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td class="label" style="color: #888; font-weight: 500">
+                  Instagram
+                </td>
+                <td style="border-bottom: 1px dashed #bbb">
+                  <a href="https://www.instagram.com/tsaowenzee" target="_blank"
+                    >https://www.instagram.com/tsaowenzee</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td
+                  class="label"
+                  style="
+                    color: #888;
+                    font-weight: 500;
+                    background: lemonchiffon;
+                    border-bottom: 1px dashed #bbb;
+                  "
+                >
+                  Facebook
+                </td>
+                <td style="color: #aaa; border-bottom: 1px dashed #bbb">
+                  None
+                </td>
+              </tr>
+              <tr>
+                <td class="label" style="color: #888; font-weight: 500">
+                  Whatsapp
+                </td>
+                <td style="color: #aaa">None</td>
+              </tr>
+            </table>
+            <p style="margin-top: 2rem; color: darkgray">
+              請確認您的個人資料是否正確。如需修改請點擊「編輯個人資料」。
+            </p>
           </div>
         </td>
       </tr>
