fix: restructure account section in dashboard and update contact information display

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -161,61 +161,6 @@
                   </table>
                 </td>
               </tr>
-              <tr>
-                <!-- 左欄：代表人，一格佔 5 行 -->
-                <td rowspan="2">
-                  <span class="label">代表人 Contact Person</span><br />
-                  <div
-                    style="
-                      vertical-align: middle;
-                      font-size: 3rem;
-                      line-height: 2rem;
-                    "
-                  >
-                    <span style="font-size: 2rem" id="contact-person"
-                      >黃偉倫</span
-                    >
-                  </div>
-                </td>
-
-                <!-- 第一行右欄：Email -->
-                <td>
-                  <span class="label">聯絡信箱 Contact Email</span><br /><span
-                    id="contact-email"
-                    >something@double-grass.com</span
-                  >
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span class="label">聯絡電話 Contact Phone</span><br /><span
-                    id="contact-phone"
-                    >(+31)0923485729</span
-                  >
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span class="label">Website</span><br />
-                  <span id="website">www.website.com</span>
-                </td>
-                <td>
-                  <span class="label">Instagram</span><br />
-                  <span id="instagram"
-                    >https://www.instagram.com/double-grass/</span
-                  >
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span class="label">Facebook</span><br />
-                  <span id="facebook">None</span>
-                </td>
-                <td>
-                  <span class="label">Whatsapp</span><br />
-                  <span id="whatsapp">None</span>
-                </td>
-              </tr>
             </table>
           </div>
         </td>
@@ -663,10 +608,71 @@
             </table>
           </div>
         </td>
+
+        <td class="account" style="display: none">
+          <div class="scroll-inner">
+            <table width="100%">
+              <tr colspan="2" style="position: relative">
+                <!-- 左欄：代表人，一格佔 5 行 -->
+                <td rowspan="2">
+                  <span class="label">代表人 Contact Person</span><br />
+                  <div
+                    style="
+                      vertical-align: middle;
+                      font-size: 3rem;
+                      line-height: 2rem;
+                    "
+                  >
+                    <span style="font-size: 2rem" id="contact-person"
+                      >黃偉倫</span
+                    >
+                  </div>
+                </td>
+
+                <!-- 第一行右欄：Email -->
+                <td>
+                  <span class="label">聯絡信箱 Contact Email</span><br /><span
+                    id="contact-email"
+                    >something@double-grass.com</span
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <span class="label">聯絡電話 Contact Phone</span><br /><span
+                    id="contact-phone"
+                    >(+31)0923485729</span
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <span class="label">Website</span><br />
+                  <span id="website">www.website.com</span>
+                </td>
+                <td>
+                  <span class="label">Instagram</span><br />
+                  <span id="instagram"
+                    >https://www.instagram.com/double-grass/</span
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <span class="label">Facebook</span><br />
+                  <span id="facebook">None</span>
+                </td>
+                <td>
+                  <span class="label">Whatsapp</span><br />
+                  <span id="whatsapp">None</span>
+                </td>
+              </tr>
+            </table>
+          </div>
+        </td>
       </tr>
     </table>
     <script src="js/dashboard-body.js"></script>
-    <!-- 建議加在 </body> 前 -->
     <script>
       // 根據地區切換素材包與簽證欄位
       document
