--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -80,6 +80,29 @@
           <div class="scroll-inner">
             <table width="100%">
               <tr>
+                <td colspan="1" style="position: relative">
+                  <span class="label">報名編號 Application Number</span><br />
+                  <span style="font-size: 3rem" id="application-number"
+                    >25-LB001</span
+                  >
+                </td>
+                <td style="width: 30%">
+                  <span class="label">錄取結果 Application Result</span><br />
+                  <div style="vertical-align: middle; font-size: 2.7rem">
+                    <span
+                      style="
+                        font-size: 2rem;
+                        line-height: 1rem;
+                        font-weight: bold;
+                        padding: 0px 10px 0px 10px;
+                      "
+                      id="application-result"
+                      >錄取</span
+                    >
+                  </div>
+                </td>
+              </tr>
+              <tr>
                 <td colspan="2" style="position: relative">
                   <span
                     style="
@@ -98,7 +121,6 @@
                     title="編輯"
                     >&#9998;</span
                   >
-
                   <span class="label">品牌名稱 Brand Name</span><br />
                   <span style="font-size: 3rem" id="brand-name">草率</span>
                 </td>
@@ -173,32 +195,28 @@
                 <td colspan="3" style="padding: 0; border: none">
                   <table style="width: 100%; table-layout: auto">
                     <tr style="padding: 0; border: none">
-                      <!-- 報名編號 -->
+                      <!-- 攤商編號 -->
                       <td style="width: 40%">
-                        <span class="label">報名編號 Application Number</span
-                        ><br />
-                        <div>
-                          <span style="font-size: 3rem" id="application-number"
-                            >25-TP001</span
-                          >
-                        </div>
-                      </td>
-
-                      <!-- 錄取結果 -->
-                      <td style="width: 30%">
-                        <span class="label">錄取結果 Application Result</span
-                        ><br />
+                        <span class="label">攤商編號 Booth Number</span><br />
                         <div style="vertical-align: middle; font-size: 2.7rem">
                           <span
                             style="
                               font-size: 2rem;
-                              line-height: 1rem;
-                              font-weight: bold;
-                              padding: 0px 10px 0px 10px;
+                              color: black;
+                              line-height: 1.5rem;
                             "
-                            id="application-result"
-                            >錄取</span
-                          >
+                            id="Booth-number"
+                            >N/A
+                          </span>
+                          <span
+                            style="
+                              font-size: 1rem;
+                              color: darkgray;
+                              line-height: 1rem;
+                              display: block;
+                            "
+                            >11 月 21 日公佈
+                          </span>
                         </div>
                       </td>
 
@@ -216,6 +234,15 @@
                             id="registration-status"
                             >尚未完成報名</span
                           >
+                          <span
+                            style="
+                              font-size: 1rem;
+                              color: darkgray;
+                              line-height: 1rem;
+                              display: block;
+                            "
+                            >7 月 15 日對帳後一次性更新。
+                          </span>
                         </div>
                       </td>
                     </tr>
@@ -668,6 +695,121 @@
                 </td>
               </tr>
             </table>
+          </div>
+        </td>
+        <td class="edit-page" style="display: none">
+          <div class="scroll-inner">
+            <form class="edit-form">
+              <h2 style="font-size: 1.5rem">編輯品牌資料 Edit Brand Info</h2>
+
+              <table width="100%">
+                <tr>
+                  <td colspan="2">
+                    <span class="label">品牌名稱 Brand Name</span><br />
+                    <input
+                      type="text"
+                      name="brandName"
+                      value="Yoshimi Saito"
+                      style="width: 100%"
+                    />
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="2">
+                    <span class="label">品牌簡介 Bio</span><br />
+                    <textarea name="bio" rows="6" style="width: 100%">
+這是一段品牌簡介...</textarea
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span class="label">代表人 Contact Person</span><br />
+                    <input
+                      type="text"
+                      name="contactPerson"
+                      value="王大明"
+                      style="width: 100%"
+                    />
+                  </td>
+                  <td>
+                    <span class="label">聯絡信箱 Email</span><br />
+                    <input
+                      type="email"
+                      name="email"
+                      value="damin@gmail.com"
+                      style="width: 100%"
+                    />
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span class="label">聯絡電話 Phone</span><br />
+                    <input
+                      type="text"
+                      name="phone"
+                      value="(+31)0923485729"
+                      style="width: 100%"
+                    />
+                  </td>
+                  <td>
+                    <span class="label">Website</span><br />
+                    <input
+                      type="url"
+                      name="website"
+                      value="https://www.nowplacesf.com/publications"
+                      style="width: 100%"
+                    />
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span class="label">Instagram</span><br />
+                    <input
+                      type="text"
+                      name="instagram"
+                      value="@51personaeproject"
+                      style="width: 100%"
+                    />
+                  </td>
+                  <td>
+                    <span class="label">Facebook</span><br />
+                    <input
+                      type="text"
+                      name="facebook"
+                      value=""
+                      style="width: 100%"
+                    />
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="2">
+                    <span class="label">Whatsapp</span><br />
+                    <input
+                      type="text"
+                      name="whatsapp"
+                      value=""
+                      style="width: 100%"
+                    />
+                  </td>
+                </tr>
+              </table>
+
+              <p style="margin-top: 2rem; color: darkgray">
+                請再次確認資訊是否正確後進行修改。請注意，草率簿將於 8
+                月底開始排版，最終資料將以工作同仁所彙整的版本為準。
+              </p>
+
+              <div style="margin-top: 1rem">
+                <button
+                  type="submit"
+                  class="pay-button"
+                  style="padding: 0.7rem 2rem"
+                >
+                  送出 Submit
+                </button>
+              </div>
+            </form>
           </div>
         </td>
       </tr>
